--- a/Templates/dashboard-export.html
+++ b/Templates/dashboard-export.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load tags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -78,7 +79,7 @@
                 </div>
             </div>
         </div>
-    <form action="{% url 'csv_export' %}" method="POST">
+    <form action="{% url 'csv_export' %}" method="GET">
     {% csrf_token %}
         <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 25px;margin-top: 15px;margin-bottom: 0px;">
             <div class="row d-flex justify-content-center">
@@ -88,11 +89,10 @@
             </div>
         </div>
         {% for report in reports %}
-
             <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 0px;">
             <div class="row">
                 <div class="col-1">
-                    <input type="checkbox" style="width: 20px;height: 20px;" value = "{{ report.id }}">
+                    <input type="checkbox" style="width: 20px;height: 20px;" name="reportID{{ reports|index_finder:report }}" value="{{ report.id }}">
                 </div>
                 <div class="col">
                     <div class="row">
@@ -142,6 +142,7 @@
             </div>
         </div>
         {% endfor %}
+            <input type="hidden" name="report_count" value="{{ count }}">
     </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
