--- a/Templates/edit_report.html
+++ b/Templates/edit_report.html
@@ -5,16 +5,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>The Mount</title>
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=ABeeZee&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Abel&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Lato&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Noto+Sans+JP&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Noto+Sans+KR&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'fonts/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'fonts/simple-line-icons.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <title>The Mount Incident Tracking System</title>
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ABeeZee&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body style="font-family: ABeeZee, sans-serif;font-size: 18px;">
@@ -322,7 +323,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
