--- a/Templates/read_only_report.html
+++ b/Templates/read_only_report.html
@@ -5,16 +5,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>The Mount</title>
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=ABeeZee&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Abel&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Lato&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Noto+Sans+JP&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Noto+Sans+KR&amp;display=swap' %}">
-    <link rel="stylesheet" href="{% static 'fonts/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'fonts/simple-line-icons.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <title>The Mount Incident Tracking System</title>
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="icon" type="image/png" sizes="5982x5064" href="{% static 'img/The-Mount-Main-Logo-JPG.png' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ABeeZee&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body style="font-family: ABeeZee, sans-serif;font-size: 18px;">
@@ -32,7 +33,7 @@
             </div>
         </nav>
     </div>
-    <div class="container" style="margin-bottom: 50px;">
+    <div class="container" style="margin-bottom: 50px; margin-top: 50px">
         <div class="row d-flex justify-content-center justify-content-sm-center justify-content-xl-center">
             {% if messages %}
                 {% for message in messages %}
@@ -41,17 +42,6 @@
                     </div>
                 {% endfor %}
             {% endif %}
-            <div class="col-12" style="margin-bottom: 40px;">
-                <div style="text-align: center;margin-top: 25px;"><img src="{% static 'img/The-Mount-Main-Logo-JPG.png' %}" width="100">
-                    <p style="font-family: ABeeZee, sans-serif;font-size: 35px;"> The Mount Continuing Care<br>Incident Reporting Form</p>
-                </div>
-                <p class="text-center">You are logged in as:&nbsp; {{ username }}</p>
-                <ul class="nav nav-tabs d-flex justify-content-center">
-                    <li class="nav-item"><a class="nav-link active" href="#">Reporting Form</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Page 1</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Page 2</a></li>
-                </ul>
-            </div>
             <div class="col">
                 <div>
                     <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
@@ -338,7 +328,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
