--- a/Templates/read_only_report.html
+++ b/Templates/read_only_report.html
@@ -257,7 +257,7 @@
                                 <p style="margin-bottom: 5px;">Date &amp; Time:</p><input class="form-control" type="datetime-local" name="family_notification_date" value="{{ report.family_notification_date|date:"Y-m-d\TH:i" }}" disabled>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
-                                <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-41" name="physician_notified" value="True" {% if report.physician_notified == True %} checked {% endif %} disabled><label class="form-check-label" for="formCheck-41">Physician Notified</label></div>
+                                <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-41" name="physician_notified" value="True" {% if report.physician_notified == True %} checked {% endif %} disabled><label class="form-check-label" for="formCheck-41">Physician or Provider Notified</label></div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-8">
                                 <p style="margin-bottom: 5px;">Name:</p><input class="form-control" type="text" name="physician_name" value="{{ report.physician_name }}" disabled>
@@ -275,7 +275,7 @@
                     <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
                         <div class="row">
                             <div class="col-12">
-                                <p>Action or Treatment prescribed by the physician/supervisor:</p>
+                                <p>Action or Treatment prescribed by the physician/provider/supervisor:</p>
                             </div>
                             <div class="col-12"><textarea class="form-control" name="action_treatment_prescribed" disabled>{{ report.action_treatment_prescribed }}</textarea></div>
                             <div class="col-12">
@@ -311,7 +311,7 @@
                     </div>
                     <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
                         <div class="row">
-                                <p>Physician Comments:</p>
+                                <p>Physician or Provider Comments:</p>
                             </div>
                             <div class="col-12"><textarea class="form-control form-control-lg" name="physician_comments" disabled>{{ report.physician_comments }}</textarea></div>
                         </div>
