--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -45,43 +45,44 @@
                         <div class="row d-flex justify-content-center" style="margin-top: 10px;">
                             <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="residents_name" placeholder="Residents" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
                             <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
-                                <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Date</button>
+                                <div class="dropdown">
+                                    <button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Date</button>
                                     <div class="dropdown-menu">
                                         <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">From:</p><input class="form-control" type="date" name="date_from" style="margin-left: 10px;margin-right: 10px;width: 90%;">
                                         <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">To:</p><input class="form-control" type="date" name="date_to" style="margin-left: 10px;margin-right: 10px;width: 90%;">
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="reporter_name" placeholder="Reporter" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;"><input class="form-control" type="text" name="reporter_name" placeholder="Reporter" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Location</button>
                                     <div class="dropdown-menu">
                                         {{ reports|location_options }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Type of Care</button>
                                     <div class="dropdown-menu">
                                         {{ reports|care_options }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Incident Type</button>
                                     <div class="dropdown-menu">
                                         {{ reports|incident_options }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Report Status</button>
                                     <div class="dropdown-menu">
                                         {{ reports|report_status }}
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
+                            <div class="col-12 col-sm-6 col-xl-2" style="padding: 5px 10px;">
                                 <div class="d-flex justify-content-center" style="width: 100%;padding: 6px 12px;height: 100%;border-width: 2px;border-style: solid;border-radius: 4px;">
                                         <input class="form-check-input" type="checkbox" id="formCheck-3" name="display_all_toggle" style="text-align: left;border: 2px solid rgb(0, 0, 0);padding: 7px;">
                                             <label class="form-check-label" for="formCheck-3" style="font-size: 18px;">&nbsp;Display All</label>
