--- a/Templates/edit_report.html
+++ b/Templates/edit_report.html
@@ -44,7 +44,7 @@
             {% endif %}
             <div class="col">
                 <div>
-                    <form action="/edit_report/{{ report.id }}" method="POST">
+                    <form action="/edit_report/{{ report.id }}{{ report_id }}" method="POST">
                         {% csrf_token %}
                         <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
                             <p>Individuals Involved:</p>
