--- a/Templates/read_only_report.html
+++ b/Templates/read_only_report.html
@@ -339,9 +339,6 @@
                         </div>
                     </div>
                     <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
-                        <div class="col">
-                            <p style="color: var(--bs-red);font-style: italic;text-decoration:  underline;">SIGNATURES HERE (FORMAT/PROTOCOL TO BE DETERMINED)</p>
-                        </div>
                         <div class="row">
                                 <p>Physician or Provider Comments:</p>
                             </div>
@@ -350,21 +347,27 @@
                     </div>
                     <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
                         <div class="row" style="margin-top: 20px">
+                            {% if report.report_status is not "CO" %}
                             <div class="col-4">
                                 <a href="/edit_report/{{ report.id }}">
                                     <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;">Edit</button>
                                 </a>
                             </div>
+                            {% endif %}
+                            {% if report.report_status is "SU" %}
                             <div class="col-4">
                                 <a href="/mark_complete/{{ report.id }}">
                                     <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;">Mark as Complete</button>
                                 </a>
                             </div>
+                            {% endif %}
+                            {% if report.report_status is "PP" %}
                             <div class="col-4">
                                 <a href="/sign_off/{{ report.id }}">
                                     <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;">Sign Off on Report</button>
                                 </a>
                             </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
