--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -35,6 +35,17 @@
         </nav>
     </div>
     <div class="container" style="margin-bottom: 150px;">
+     <div class="container" style="margin-bottom: 50px; margin-top: 50px">
+        <div class="row d-flex justify-content-center justify-content-sm-center justify-content-xl-center">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} col-12 text-center">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+            <div class="col">
+                <div>
     <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 25px;margin-top: 15px;margin-bottom: 0px;">
             <div class="text-center"><a class="btn btn-secondary" data-bs-toggle="collapse" aria-expanded="true" aria-controls="collapse-2" href="#collapse-2" role="button" style="margin-bottom: 10px;width: 80%;font-size: 18px;"><i class="fa fa-filter"></i>&nbsp;Filters</a>
                 <div class="collapse show" id="collapse-2">
