--- a/Templates/read_only_report.html
+++ b/Templates/read_only_report.html
@@ -347,21 +347,21 @@
                     </div>
                     <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
                         <div class="row" style="margin-top: 20px">
-                            {% if report.report_status is not "CO" %}
+                            {% if report.report_status == "CO" %}
                             <div class="col-4">
                                 <a href="/edit_report/{{ report.id }}">
                                     <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;">Edit</button>
                                 </a>
                             </div>
                             {% endif %}
-                            {% if report.report_status is "SU" %}
+                            {% if report.report_status == "SU" %}
                             <div class="col-4">
                                 <a href="/mark_complete/{{ report.id }}">
                                     <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;">Mark as Complete</button>
                                 </a>
                             </div>
                             {% endif %}
-                            {% if report.report_status is "PP" %}
+                            {% if report.report_status == "PP" %}
                             <div class="col-4">
                                 <a href="/sign_off/{{ report.id }}">
                                     <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;">Sign Off on Report</button>
