--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -119,7 +119,7 @@
                 <div class="col-12 col-sm-6 col-lg-5 text-center" style="margin-bottom: 20px;"><a class="btn btn-secondary disabled" role="button" style="width: 80%;">&nbsp;<i class="fa fa-download" style="font-size: 20px;"></i>&nbsp;Export</a></div>
             </div>
         </div>
-        {% for report in reports %}
+        {% for report in reports reversed %}
             <a style="text-decoration-line: none" href="/read_report/{{ report.id }}">
             <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 0px;">
                 <div class="row">
